--- a/csharp/GUI/App.xaml
+++ b/csharp/GUI/App.xaml
@@ -38,6 +38,91 @@
             <local:IntegerConstantEqualsConverter x:Key="IntegerConstantEqualsConverter"/>
             <local:DoubleSubConverter x:Key="DoubleSubConverter"/>
             <local:AnyTrueAsVisibleConverter x:Key="AnyTrueAsVisibleConverter"/>
+            <x:Array x:Key="FunctionalAreaIconColors" Type="Color">
+                <Color>#01579b</Color>
+                <Color>#b3e5fc</Color>
+            </x:Array>
+            <SolidColorBrush
+                x:Key="FunctionalAreaIconBrush">
+                <SolidColorBrush.Color>
+                    <Binding
+                        Source="{x:Static local:App.Current}"
+                        Path="AppUsesLightMode"
+                        Converter="{StaticResource BooleanSwitchOperationConverter}"
+                        ConverterParameter="{StaticResource FunctionalAreaIconColors}"/>
+                </SolidColorBrush.Color>
+            </SolidColorBrush>
+            <x:Array x:Key="ItemContainerBackgroundColors" Type="Color">
+                <Color>#f5f5f5</Color>
+                <Color>#424242</Color>
+            </x:Array>
+            <SolidColorBrush
+                x:Key="ItemContainerBackgroundBrush">
+                <SolidColorBrush.Color>
+                    <Binding
+                        Source="{x:Static local:App.Current}"
+                        Path="AppUsesLightMode"
+                        Converter="{StaticResource BooleanSwitchOperationConverter}"
+                        ConverterParameter="{StaticResource ItemContainerBackgroundColors}"/>
+                </SolidColorBrush.Color>
+            </SolidColorBrush>
+            <x:Array x:Key="HighContrastColors" Type="Color">
+                <Color>#424242</Color>
+                <Color>#e0e0e0</Color>
+            </x:Array>
+            <SolidColorBrush
+                x:Key="HighContrastBrush">
+                <SolidColorBrush.Color>
+                    <Binding
+                        Source="{x:Static local:App.Current}"
+                        Path="AppUsesLightMode"
+                        Converter="{StaticResource BooleanSwitchOperationConverter}"
+                        ConverterParameter="{StaticResource HighContrastColors}"/>
+                </SolidColorBrush.Color>
+            </SolidColorBrush>
+            <x:Array x:Key="ThemedButtonForegroundColors" Type="Color">
+                <Color>#3F51B5</Color>
+                <Color>#82b1ff</Color>
+            </x:Array>
+            <SolidColorBrush
+                x:Key="ThemedButtonForegroundBrush">
+                <SolidColorBrush.Color>
+                    <Binding
+                        Source="{x:Static local:App.Current}"
+                        Path="AppUsesLightMode"
+                        Converter="{StaticResource BooleanSwitchOperationConverter}"
+                        ConverterParameter="{StaticResource ThemedButtonForegroundColors}"/>
+                </SolidColorBrush.Color>
+            </SolidColorBrush>
+            <x:Array x:Key="ThemedHighContrastButtonForegroundColors" Type="Color">
+                <Color>#002984</Color>
+                <Color>#aacaf1</Color>
+            </x:Array>
+            <SolidColorBrush
+                x:Key="ThemedHighContrastButtonForegroundBrush">
+                <SolidColorBrush.Color>
+                    <Binding
+                        Source="{x:Static local:App.Current}"
+                        Path="AppUsesLightMode"
+                        Converter="{StaticResource BooleanSwitchOperationConverter}"
+                        ConverterParameter="{StaticResource ThemedHighContrastButtonForegroundColors}"/>
+                </SolidColorBrush.Color>
+            </SolidColorBrush>
+            <SolidColorBrush x:Key="ThemedLowContrastButtonForegroundBrush" Color="#91bef8"/>
+            <x:Array x:Key="ThemedCaretColors" Type="Color">
+                <Color>Black</Color>
+                <Color>White</Color>
+            </x:Array>
+            <SolidColorBrush
+                x:Key="ThemedCaretBrush">
+                <SolidColorBrush.Color>
+                    <Binding
+                        Source="{x:Static local:App.Current}"
+                        Path="AppUsesLightMode"
+                        Converter="{StaticResource BooleanSwitchOperationConverter}"
+                        ConverterParameter="{StaticResource ThemedCaretColors}"/>
+                </SolidColorBrush.Color>
+            </SolidColorBrush>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
