--- a/csharp/GUI/Dialog/FileOverwriteDialog.xaml
+++ b/csharp/GUI/Dialog/FileOverwriteDialog.xaml
@@ -7,6 +7,7 @@
     xmlns:local="clr-namespace:OpenSvip.GUI.Dialog"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:app="clr-namespace:OpenSvip.GUI"
     mc:Ignorable="d"
     d:Background="White"
     MinHeight="120"
@@ -47,8 +48,9 @@
             <Button
                 x:Name="YesButton"
                 VerticalAlignment="Center"
-                Style="{StaticResource MaterialDesignFlatButton}"
                 Margin="0 8 8 0"
+                Style="{StaticResource MaterialDesignFlatButton}"
+                Foreground="{StaticResource ThemedButtonForegroundBrush}"
                 Width="70"
                 Content="是"
                 Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
@@ -60,8 +62,9 @@
             <Button
                 x:Name="NoButton"
                 VerticalAlignment="Center"
-                Style="{StaticResource MaterialDesignFlatButton}"
                 Margin="0 8 8 0"
+                Style="{StaticResource MaterialDesignFlatButton}"
+                Foreground="{StaticResource ThemedButtonForegroundBrush}"
                 Width="70"
                 Content="否"
                 Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
